--- a/.github/workflows/sync-master-to-next.yml
+++ b/.github/workflows/sync-master-to-next.yml
@@ -4,7 +4,7 @@ name: Sync master to next
 on:
   pull_request:
     types: [closed]
-    branches: [master]
+    branches: [master, main]
 
 env:
   TARGET_BRANCH: next
