--- a/features/event-handlers/pom.xml
+++ b/features/event-handlers/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.wso2.identity.webhook.event.handlers</groupId>
         <artifactId>identity-webhook-event-handlers</artifactId>
-        <version>1.0.370</version>
+        <version>1.0.371-next-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
